--- a/Silo.WMS/packages.config
+++ b/Silo.WMS/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Crc32C.NET" version="1.0.5.0" targetFramework="net462" />
+  <package id="DnsClient" version="1.3.1" targetFramework="net462" />
   <package id="Microsoft.AspNetCore.Connections.Abstractions" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.AspNetCore.Http.Features" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net462" />
@@ -24,7 +26,14 @@
   <package id="Microsoft.Orleans.OrleansRuntime" version="3.1.7" targetFramework="net462" />
   <package id="Microsoft.Orleans.Runtime.Abstractions" version="3.1.7" targetFramework="net462" />
   <package id="Microsoft.Orleans.Server" version="3.1.7" targetFramework="net462" />
+  <package id="MongoDB.Bson" version="2.10.4" targetFramework="net462" />
+  <package id="MongoDB.Driver" version="2.10.4" targetFramework="net462" />
+  <package id="MongoDB.Driver.Core" version="2.10.4" targetFramework="net462" />
+  <package id="MongoDB.Libmongocrypt" version="1.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
+  <package id="Orleans.Providers.MongoDB" version="3.1.7" targetFramework="net462" />
+  <package id="SharpCompress" version="0.23.0" targetFramework="net462" />
+  <package id="Snappy.NET" version="1.1.1.8" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net462" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net462" />
