--- a/Service.HY/packages.config
+++ b/Service.HY/packages.config
@@ -29,6 +29,7 @@
   <package id="ServiceStack.Client" version="5.8.0" targetFramework="net462" />
   <package id="ServiceStack.Common" version="5.8.0" targetFramework="net462" />
   <package id="ServiceStack.Interfaces" version="5.8.0" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite" version="5.8.0" targetFramework="net462" />
   <package id="ServiceStack.Text" version="5.8.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net462" />
