--- a/Service.HY/Client.HY.csproj
+++ b/Service.HY/Client.HY.csproj
@@ -200,8 +200,6 @@
       <Name>GrainInterface.WMS</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entity\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
