--- a/Silo.WMS/packages.config
+++ b/Silo.WMS/packages.config
@@ -17,15 +17,16 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging.Configuration" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging.Console" version="3.1.4" targetFramework="net462" />
+  <package id="Microsoft.Extensions.ObjectPool" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Options" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.4" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Core" version="3.1.7" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Core.Abstractions" version="3.1.7" targetFramework="net462" />
-  <package id="Microsoft.Orleans.OrleansProviders" version="3.1.7" targetFramework="net462" />
-  <package id="Microsoft.Orleans.OrleansRuntime" version="3.1.7" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Runtime.Abstractions" version="3.1.7" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Server" version="3.1.7" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Core" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Core.Abstractions" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.OrleansProviders" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.OrleansRuntime" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Runtime.Abstractions" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.Server" version="3.2.0" targetFramework="net462" />
   <package id="MongoDB.Bson" version="2.10.4" targetFramework="net462" />
   <package id="MongoDB.Driver" version="2.10.4" targetFramework="net462" />
   <package id="MongoDB.Driver.Core" version="2.10.4" targetFramework="net462" />
