--- a/GrainInterface.CMS/packages.config
+++ b/GrainInterface.CMS/packages.config
@@ -3,7 +3,6 @@
   <package id="Microsoft.AspNetCore.Connections.Abstractions" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.AspNetCore.Http.Features" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net462" />
-  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.4" targetFramework="net462" />
@@ -14,24 +13,14 @@
   <package id="Microsoft.Extensions.Hosting.Abstractions" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.4" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Configuration" version="3.1.4" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Console" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.ObjectPool" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Options" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="3.1.4" targetFramework="net462" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.4" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Client" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.Orleans.CodeGenerator.MSBuild" version="3.2.0" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Orleans.Core" version="3.2.0" targetFramework="net462" />
   <package id="Microsoft.Orleans.Core.Abstractions" version="3.2.0" targetFramework="net462" />
-  <package id="Microsoft.Orleans.OrleansProviders" version="3.2.0" targetFramework="net462" />
-  <package id="Microsoft.Orleans.Runtime.Abstractions" version="3.2.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
-  <package id="ServiceStack" version="5.8.0" targetFramework="net462" />
-  <package id="ServiceStack.Client" version="5.8.0" targetFramework="net462" />
-  <package id="ServiceStack.Common" version="5.8.0" targetFramework="net462" />
-  <package id="ServiceStack.Interfaces" version="5.8.0" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite" version="5.8.0" targetFramework="net462" />
-  <package id="ServiceStack.Text" version="5.8.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net462" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net462" />
